hard-gists/996771/run.log
=== Docker Run Log for 996771 ===
Started at: Mi 29. Okt 18:37:22 CET 2025

[2025-10-29 18:37:22] START: Running container for 996771
[2025-10-29 18:37:23] SUCCESS: Container 33c5fcdec3cf99dc5581428498dd434805246f89ea26ab10c83b3eed3179f764 started for 996771
=== Container logs for 996771 ===
  File "/snippet.py", line 136
    print "generating dictionary..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 996771 ===
[2025-10-29 18:37:25] INFO: Container 33c5fcdec3cf99dc5581428498dd434805246f89ea26ab10c83b3eed3179f764 has stopped
